--- a/comp1238.md
+++ b/comp1238.md
@@ -3,26 +3,26 @@
 - Cuneiform looks weird
 - The Epic of Gilgamesh was epic
 ## Week 2 - Bits and Bytes
-####Binary System
+**Binary System**
 - Bit: Short for binary digit, represents one of two states (0 or 1).
 - Byte: Group of 8 bits.
 - Binary Numbers: Numbers represented using base 2.
 ## Week 3 - Structure of Text
-#### Text Structure
+**Text Structure**
 - Historical Context:
 - Early text structures in printing and typewriting.
 - Example: Ancient texts with commentary.
 - Modern Examples:
 - Newspapers, ledgers, and digital formats like JSON.
 ## Week 4 - Manipulating Text & Text Editors
-#### Keyboard Mastery
+**Keyboard Mastery**
 - Importance: Efficient typing reduces cognitive load.
 - Types:
 -- Standard 104-key layout.
 - Variants like split, vertical, and ortholinear keyboards.
 - Layouts:
 -- QWERTY, AZERTY, Dvorak.
-#### Text Editors
+**Text Editors**
 - Types:
 -- Word Processors (e.g., Microsoft Word) vs. Text Editors (e.g., Notepad).
 - Popular Editors:
@@ -33,11 +33,11 @@
 -- IDEs: Integrated Development Environments like WebStorm, Pycharm.
   ## Week 5 - Command Line Interfaces
   Introduction to Command Line Interfaces (CLI)
-#### History and Evolution:
+**History and Evolution:**
 - Originated from teletype machines connected to computers.
 - Commands were typed and printed on paper, later replaced by screens.
 - Commands are often short due to historical reasons.
-#### Basic CLI Commands
+**Basic CLI Commands**
 -  ls: List files in a directory.
 -  cd: Change directory.
 -  pwd: Print working directory.
@@ -49,16 +49,16 @@
 -  ping: Test network connectivity.
 
 ## Week 6 - Git, GitHub, Diff, and Versioning
-#### Introduction to Version Control
+** Introduction to Version Control
 -Version Control Systems (VCS): Tools to manage changes in projects.
 -Essential in software development, engineering, legal documents.
 -Challenges: Managing multiple versions, avoiding confusion with outdated versions.
-#### Git and GitHub
-###### Git:
+**Git and GitHub**
+#######Git:
 - Open-source tool for version control.
 - Installed locally to manage files on your disk.
 -Developed by Linus Torvalds in 2005.
-###### GitHub:
+####### GitHub:
 - Cloud service for hosting Git repositories.
 - Provides additional features like web-based editing.
 - Owned by Microsoft.
