--- a/comp1238.md
+++ b/comp1238.md
@@ -31,34 +31,42 @@
 -- Visual Studio Code (VS Code): Widely used, feature-rich.
 - Extensions and themes available.
 -- IDEs: Integrated Development Environments like WebStorm, Pycharm.
-  ## Week 5 - Command Line Interfaces
-  Introduction to Command Line Interfaces (CLI)
+## Week 5 - Command Line Interfaces
+
+### Introduction to Command Line Interfaces (CLI)
 **History and Evolution:**
 - Originated from teletype machines connected to computers.
-- Commands were typed and printed on paper, later replaced by screens.
+- Initially, commands were typed and printed on paper, later replaced by screens.
 - Commands are often short due to historical reasons.
-**Basic CLI Commands**
--  ls: List files in a directory.
--  cd: Change directory.
--  pwd: Print working directory.
--  cat: Display file contents.
--  less: View file contents interactively.
--  cp: Copy files.
--  mv: Move files.
--  mkdir: Create a directory.
--  ping: Test network connectivity.
+
+### Basic CLI Commands
+- `ls` - List files in a directory.
+- `cd` - Change directory.
+- `pwd` - Print working directory.
+- `cat` - Display file contents.
+- `less` - View file contents interactively.
+- `cp` - Copy files.
+- `mv` - Move files.
+- `mkdir` - Create a directory.
+- `ping` - Test network connectivity.
+
+---
 
 ## Week 6 - Git, GitHub, Diff, and Versioning
-** Introduction to Version Control
--Version Control Systems (VCS): Tools to manage changes in projects.
--Essential in software development, engineering, legal documents.
--Challenges: Managing multiple versions, avoiding confusion with outdated versions.
-**Git and GitHub**
-#######Git:
+
+### Introduction to Version Control
+- **Version Control Systems (VCS):** Tools used to manage changes in projects.
+- Essential in software development, engineering, and legal document management.
+- **Challenges:** Managing multiple versions, avoiding confusion with outdated files.
+
+### Git and GitHub
+
+#### Git:
 - Open-source tool for version control.
 - Installed locally to manage files on your disk.
--Developed by Linus Torvalds in 2005.
-####### GitHub:
+- Developed by **Linus Torvalds** in 2005.
+
+#### GitHub:
 - Cloud service for hosting Git repositories.
-- Provides additional features like web-based editing.
-- Owned by Microsoft.
+- Provides additional features like web-based editing and collaboration.
+- Owned by **Microsoft**.
