--- a/comp1238.md
+++ b/comp1238.md
@@ -1,40 +1,53 @@
 ## Week 1 - History
-- One writing system can be used by many languages
-- Cuneiform looks weird
-- The Epic of Gilgamesh was epic
+- One writing system can be used by many languages.
+- Cuneiform looks weird.
+- The *Epic of Gilgamesh* was epic.
+
 ---
+
 ## Week 2 - Bits and Bytes
-**Binary System**
-- Bit: Short for binary digit, represents one of two states (0 or 1).
-- Byte: Group of 8 bits.
-- Binary Numbers: Numbers represented using base 2.
+
+### Binary System
+- **Bit:** Short for binary digit, represents one of two states (0 or 1).
+- **Byte:** Group of 8 bits.
+- **Binary Numbers:** Numbers represented using base 2.
+
 ---
+
 ## Week 3 - Structure of Text
-**Text Structure**
-- Historical Context:
-- Early text structures in printing and typewriting.
-- Example: Ancient texts with commentary.
-- Modern Examples:
-- Newspapers, ledgers, and digital formats like JSON.
+
+### Text Structure
+- **Historical Context:**
+  - Early text structures in printing and typewriting.
+  - Example: Ancient texts with commentary.
+- **Modern Examples:**
+  - Newspapers, ledgers, and digital formats like JSON.
+
 ---
+
 ## Week 4 - Manipulating Text & Text Editors
-**Keyboard Mastery**
-- Importance: Efficient typing reduces cognitive load.
-- Types:
--- Standard 104-key layout.
-- Variants like split, vertical, and ortholinear keyboards.
-- Layouts:
--- QWERTY, AZERTY, Dvorak.
-**Text Editors**
-- Types:
--- Word Processors (e.g., Microsoft Word) vs. Text Editors (e.g., Notepad).
-- Popular Editors:
--- Vim: Command-line based, requires learning commands.
-- Exit command: :q!
--- Visual Studio Code (VS Code): Widely used, feature-rich.
-- Extensions and themes available.
--- IDEs: Integrated Development Environments like WebStorm, Pycharm.
+
+### Keyboard Mastery
+- **Importance:** Efficient typing reduces cognitive load.
+- **Types:**
+  - Standard 104-key layout.
+  - Variants like split, vertical, and ortholinear keyboards.
+- **Layouts:**
+  - QWERTY, AZERTY, Dvorak.
+
+### Text Editors
+- **Types:**
+  - Word Processors (e.g., Microsoft Word) vs. Text Editors (e.g., Notepad).
+- **Popular Editors:**
+  - **Vim:** Command-line based, requires learning commands.
+    - Exit command: `:q!`
+  - **Visual Studio Code (VS Code):** Widely used, feature-rich.
+    - Supports extensions and themes.
+  - **IDEs (Integrated Development Environments):**
+    - Examples: WebStorm, PyCharm.
+
 ---
+
 ## Week 5 - Command Line Interfaces
 
 ### Introduction to Command Line Interfaces (CLI)
